--- a/maps-bank.css
+++ b/maps-bank.css
@@ -93,44 +93,46 @@
 }
 
 #placesList {
-  margin-top: 20px;
-  padding: 10px;
+  margin-top: 25px;
+  padding: 0 10px;
 }
 
 .category-section {
-  margin-bottom: 20px;
+  margin-bottom: 24px;
 }
 
 .category-title {
-  font-size: 1.1em;
-  font-weight: 600;
+  font-size: 1.2em;
+  font-weight: 700;
   margin-bottom: 8px;
-  color: #333;
+  color: #111;
 }
 
-.place-item {
-  padding: 2px 0;
+.category-list {
+  list-style-type: none;
+  padding-left: 0;
+  margin: 0;
+}
+
+.category-list li {
+  margin-bottom: 10px;
+  line-height: 1.4;
 }
 
 .place-icon {
   text-decoration: none;
-  margin-right: 6px;
-  font-size: 1.1em;
+  margin-right: 5px;
+  font-size: 1.05em;
 }
 
 .place-icon:hover {
-  opacity: 0.7;
-}
-
-.place-name {
-  font-weight: 500;
-  color: #222;
+  opacity: 0.8;
 }
 
 .place-desc {
-  margin: 2px 0 6px 22px;
-  color: #555;
+  color: #444;
   font-size: 0.9em;
+  margin-left: 22px;
 }
 
 
